6453355: 4/4 new No_Safepoint_Verifier uses fail during GC

(for Serguei) Clean up use of No_Safepoint_Verifier in JVM TI

Reviewed-by: dcubed